# alumina

./: .dockerignore  .gitattributes  .gitignore  BLOG_NOTES.md  CNAME  Cargo.toml  Dockerfile  LICENSE.md  MISSING.md  Makefile  README.md  build.rs  codecov.yml  grammar.js  index.html  libc.html  libm.html  minimal.alu  report.md  search_index.js  sitemap.xml  std.html  test.html  test_type_punning.alu
.devcontainer/: devcontainer.json
aluminac/: Cargo.toml  index.html
aluminac/lib/: index.html
aluminac/lib/arena/: Arena.html  ArenaNode.html  index.html
aluminac/lib/arena/tests/: index.html
aluminac/lib/common/: Error.html  NodeVisitorExt.html  child_by.html  children_by.html  index.html
aluminac/lib/node_kinds/: FieldKind.html  NodeKind.html  NodeVisitor.html  index.html
aluminac/src/: common.rs  main.rs  pass1.rs
common/: README.md  grammar.js  tree-sitter.json
docs/: lang_guide.md
examples/: 99bottles.alu  alloc_format.alu  backtrace.alu  builder.alu  constants.alu  coroutines.alu  defer_and_move.alu  dyn.alu  example.alumina  file_io.alu  first_class_functions.alu  for_loop.alu  formatting.alu  function_pointers.alu  generators.alu  hash.alu  hashmap.alu  hashmap.alumina  hello_world.alu  hello_world.alumina  intrinsics.alu  iterators.alu  lambdas.alu  lambdas_closures.alu  line_numbering.alu  macros.alu  metaprogramming.alu  minimal.alu  minimal.alumina  peano.alu  primes.alu  printf.alu  process.alu  protocols_mixins.alu  quick_sort.alu  quicksort.alu  range_slicing.alu  reflection.alu  regex.alu  result.alu  (+13 more)
json/: Error.html  ErrorKind.html  JsonValue.html  JsonValueKind.html  JsonWritable.html  JsonWriter.html  JsonWriterExt.html  index.html
libc/: DIR.html  addrinfo.1.html  addrinfo.html  dirent.1.html  dirent.2.html  dirent.html  dirent64.1.html  dirent64.html  in6_addr.html  in_addr.html  index.html  pollfd.html  pthread_attr_t.1.html  pthread_attr_t.2.html  pthread_attr_t.3.html  pthread_attr_t.4.html  pthread_attr_t.5.html  pthread_attr_t.6.html  pthread_attr_t.html  pthread_cond_t.1.html  pthread_cond_t.2.html  pthread_cond_t.3.html  pthread_cond_t.4.html  pthread_cond_t.html  pthread_condattr_t.1.html  pthread_condattr_t.2.html  pthread_mutex_t.1.html  pthread_mutex_t.2.html  pthread_mutex_t.3.html  pthread_mutex_t.4.html  pthread_mutex_t.html  pthread_mutexattr_t.1.html  pthread_mutexattr_t.2.html  pthread_mutexattr_t.3.html  pthread_rwlock_t.1.html  pthread_rwlock_t.2.html  pthread_rwlock_t.3.html  pthread_rwlock_t.4.html  pthread_rwlock_t.html  pthread_rwlockattr_t.1.html  (+19 more)
libm/: tests.html
libraries/: README.md  llvm.alu  tree_sitter.alu
src/: ast.rs  common.rs  compiler.rs  context.rs  diagnostics.rs  global_ctx.rs  intrinsics.rs  main.rs  parser.rs  pass1.rs  types.rs  utils.rs  visitors.rs
src/alumina-boot/: Cargo.toml  build.rs  dump_lang.c
src/alumina-boot-macros/: Cargo.toml
src/alumina-boot-macros/src/: lib.rs
src/alumina-boot/src/: common.rs  compiler.rs  diagnostics.rs  global_ctx.rs  intrinsics.rs  main.rs  parser.rs  utils.rs  visitors.rs
src/alumina-boot/src/ast/: expressions.rs  format.rs  lang.rs  macros.rs  maker.rs  mod.rs  pretty.rs  rebind.rs  serialization.rs  types.rs
src/alumina-boot/src/codegen/: elide_zst.rs  functions.rs  mod.rs  types.rs
src/alumina-boot/src/ir/: bake.rs  builder.rs  const_eval.rs  dce.rs  elide_zst.rs  fold.rs  infer.rs  inline.rs  ir_inline.rs  lang.rs  layout.rs  mod.rs  mono.rs
src/alumina-boot/src/ir/mono/: intrinsics.rs  mod.rs
src/alumina-boot/src/name_resolution/: pass1.rs  path.rs  resolver.rs  scope.rs
src/alumina-boot/src/serdes/: mod.rs  protocol.rs
src/alumina-boot/src/src/: mod.rs  pass1.rs  path.rs  resolver.rs  scope.rs
static/: manifest.json  prism-alumina.js  site.js  styles.css
std/: assert.html  assert_eq.html  assert_ne.html  assume.html  builtins.html  cfg.html  cmp.html  collections.html  column.html  compile_fail.html  compile_note.html  compile_warn.html  concat.html  const_assert.html  const_assert_eq.html  const_assert_ne.html  dbg.html  debug_assert.html  debug_assert_eq.html  debug_assert_ne.html  env.html  ffi.html  file.html  fmt.html  fs.html  hash.html  include_bytes.html  index.html  internal.html  intrinsics.html  io.html  iter.html  likely.html  line.html  marker.html  math.html  mem.html  net.html  (+17 more)
(+2889 files in other folders)
