[package]
name = "aluminac"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proc-macro2 = "1.0"

[dependencies]
tree-sitter = "~0.20.0"
lazy_static = "1.4.0"
bumpalo = "3.8.0"
