[package]
name = "alumina-boot"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proc-macro2 = "1.0"

[dependencies]
regex = "1"
tree-sitter = "~0.20.0"
bumpalo = "3.8.0"
thiserror = "1.0.30"
indexmap = "1.7.0"
once_cell = "1.8.0"
colored = "2"
