[package]
name = "aluminac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter-alumina = { path = "../tree-sitter-alumina" }
tree-sitter-visitor = { path = "../../tree-sitter-visitor/tree-sitter-visitor" }
tree-sitter = "~0.20.0"
