[package]
name = "alumina-boot-macros"
description = "Procedural macros for alumina-boot"
repository = "https://github.com/alumina-lang/alumina"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
blake3 = "1"
walkdir = "2"
