[package]
name = "alumina-boot"
description = "Bootstrap compiler for the Alumina programming language"
repository = "https://github.com/alumina-lang/alumina"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proc-macro2 = "1.0"
itertools = "0.10.5"

[dependencies]
regex = "1"
walkdir = "2"
clap = { version = "4", features = ["derive", "env"] }
tree-sitter = "~0.20.10"
tree-sitter-traversal = "0.1.2"
bumpalo = "3.12.0"
thiserror = "1.0.40"
indexmap = "1.9.3"
once_cell = "1.17.1"
colored = "2"
rustc-hash = "1.1.0"
strum = "0.24"
strum_macros = "0.24"
