[package]
name = "alumina-boot"
description = "Bootstrap compiler for the Alumina programming language"
repository = "https://github.com/alumina-lang/alumina"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proc-macro2 = "1"
itertools = "0.14"

[dependencies]
regex = "1"
walkdir = "2"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
alumina-boot-macros = { path = "../alumina-boot-macros" }
tree-sitter = "0.25.4"
bumpalo = "3"
thiserror = "2"
indexmap = "2"
once_cell = "1"
colored = "2"
rustc-hash = "2"
strum = "0.27"
strum_macros = "0.27"
